Fix bridge disconnect icon and add OvsBridge support

Pulling the cable from a bridge slave port left the tray icon stuck on
`network-wired-activated`, because NetworkManager keeps the bridge connection
active even after physical link loss. The old code unconditionally set the
activated icon for bridge devices. Fix and additions

Fix this by explicitly handling `NetworkManager::Device::OvsBridge` network
types and checking for the existence of any ethernet carriers; no carriers
means no network means disconnected icon.

BUG: 517384